--- a/DeepLOB/ML_course.ipynb
+++ b/DeepLOB/ML_course.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import the required library\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import ast\n",
@@ -14,36 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 30, 40) <class 'tuple'>\n",
-      "(10, 30, 40) <class 'tuple'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = \"10, 30, 40\"\n",
-    "b = eval(a)\n",
-    "print(b , type(b))\n",
-    "b = ast.literal_eval(a)\n",
-    "print(b , type(b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,13 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the required library\n",
-    "import pandas as pd\n",
-    "\n",
     "def clean_lob(data, cols_need, cols_check, weight_mid_price=0.5, num_level=10):\n",
     "    # Initialize lists to store valid sample indices and mid prices\n",
     "    lst_valid_samples = []\n",
@@ -227,257 +196,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>DateTime</th>\n",
-       "      <td>2022-07-07  00:00:00</td>\n",
-       "      <td>2022-07-07  00:00:10</td>\n",
-       "      <td>2022-07-07  00:00:20</td>\n",
-       "      <td>2022-07-07  00:00:30</td>\n",
-       "      <td>2022-07-07  00:00:40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Open</th>\n",
-       "      <td>11897.5</td>\n",
-       "      <td>11892.25</td>\n",
-       "      <td>11879.5</td>\n",
-       "      <td>11876.25</td>\n",
-       "      <td>11879.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>High</th>\n",
-       "      <td>11898.25</td>\n",
-       "      <td>11892.75</td>\n",
-       "      <td>11880.5</td>\n",
-       "      <td>11882.5</td>\n",
-       "      <td>11882.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Low</th>\n",
-       "      <td>11892.75</td>\n",
-       "      <td>11878.25</td>\n",
-       "      <td>11876.25</td>\n",
-       "      <td>11876.0</td>\n",
-       "      <td>11878.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Last</th>\n",
-       "      <td>11893.0</td>\n",
-       "      <td>11880.0</td>\n",
-       "      <td>11876.75</td>\n",
-       "      <td>11880.25</td>\n",
-       "      <td>11882.25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Volume</th>\n",
-       "      <td>53.0</td>\n",
-       "      <td>231.0</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>89.0</td>\n",
-       "      <td>22.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NumTrades</th>\n",
-       "      <td>51.0</td>\n",
-       "      <td>211.0</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>89.0</td>\n",
-       "      <td>22.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BidVolume</th>\n",
-       "      <td>34.0</td>\n",
-       "      <td>166.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AskVolume</th>\n",
-       "      <td>19.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>14.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SumBid</th>\n",
-       "      <td>29.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>14.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SumAsk</th>\n",
-       "      <td>20.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>26.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BidPrices</th>\n",
-       "      <td>11892.750000,11892.500000,11892.250000,11892.0...</td>\n",
-       "      <td>11879.750000,11879.500000,11879.250000,11879.0...</td>\n",
-       "      <td>11876.500000,11876.250000,11876.000000,11875.7...</td>\n",
-       "      <td>11880.000000,11879.750000,11879.500000,11879.2...</td>\n",
-       "      <td>11881.500000,11881.250000,11881.000000,11880.7...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BidVolumes</th>\n",
-       "      <td>1,2,2,3,1,4,1,9,3,3,</td>\n",
-       "      <td>1,2,2,3,2,2,3,3,2,2,</td>\n",
-       "      <td>1,1,6,1,3,5,4,7,2,4,</td>\n",
-       "      <td>2,2,1,1,2,1,1,2,1,1,</td>\n",
-       "      <td>1,2,2,1,1,2,1,1,1,2,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AskPrices</th>\n",
-       "      <td>11893.250000,11893.500000,11893.750000,11894.0...</td>\n",
-       "      <td>11880.250000,11880.500000,11880.750000,11881.0...</td>\n",
-       "      <td>11877.000000,11877.250000,11877.500000,11877.7...</td>\n",
-       "      <td>11880.500000,11880.750000,11881.000000,11881.2...</td>\n",
-       "      <td>11882.500000,11882.750000,11883.000000,11883.2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AskVolumes</th>\n",
-       "      <td>1,2,3,1,1,2,2,2,3,3,</td>\n",
-       "      <td>1,1,2,2,3,3,1,2,1,2,</td>\n",
-       "      <td>2,4,1,1,3,2,5,1,4,1,</td>\n",
-       "      <td>3,4,1,2,1,1,1,1,4,1,</td>\n",
-       "      <td>5,1,1,4,1,4,2,2,2,4,</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                            0   \n",
-       "DateTime                                 2022-07-07  00:00:00  \\\n",
-       "Open                                                  11897.5   \n",
-       "High                                                 11898.25   \n",
-       "Low                                                  11892.75   \n",
-       "Last                                                  11893.0   \n",
-       "Volume                                                   53.0   \n",
-       "NumTrades                                                51.0   \n",
-       "BidVolume                                                34.0   \n",
-       "AskVolume                                                19.0   \n",
-       "SumBid                                                   29.0   \n",
-       "SumAsk                                                   20.0   \n",
-       "BidPrices   11892.750000,11892.500000,11892.250000,11892.0...   \n",
-       "BidVolumes                               1,2,2,3,1,4,1,9,3,3,   \n",
-       "AskPrices   11893.250000,11893.500000,11893.750000,11894.0...   \n",
-       "AskVolumes                               1,2,3,1,1,2,2,2,3,3,   \n",
-       "\n",
-       "                                                            1   \n",
-       "DateTime                                 2022-07-07  00:00:10  \\\n",
-       "Open                                                 11892.25   \n",
-       "High                                                 11892.75   \n",
-       "Low                                                  11878.25   \n",
-       "Last                                                  11880.0   \n",
-       "Volume                                                  231.0   \n",
-       "NumTrades                                               211.0   \n",
-       "BidVolume                                               166.0   \n",
-       "AskVolume                                                65.0   \n",
-       "SumBid                                                   22.0   \n",
-       "SumAsk                                                   18.0   \n",
-       "BidPrices   11879.750000,11879.500000,11879.250000,11879.0...   \n",
-       "BidVolumes                               1,2,2,3,2,2,3,3,2,2,   \n",
-       "AskPrices   11880.250000,11880.500000,11880.750000,11881.0...   \n",
-       "AskVolumes                               1,1,2,2,3,3,1,2,1,2,   \n",
-       "\n",
-       "                                                            2   \n",
-       "DateTime                                 2022-07-07  00:00:20  \\\n",
-       "Open                                                  11879.5   \n",
-       "High                                                  11880.5   \n",
-       "Low                                                  11876.25   \n",
-       "Last                                                 11876.75   \n",
-       "Volume                                                   85.0   \n",
-       "NumTrades                                                85.0   \n",
-       "BidVolume                                                38.0   \n",
-       "AskVolume                                                47.0   \n",
-       "SumBid                                                   34.0   \n",
-       "SumAsk                                                   24.0   \n",
-       "BidPrices   11876.500000,11876.250000,11876.000000,11875.7...   \n",
-       "BidVolumes                               1,1,6,1,3,5,4,7,2,4,   \n",
-       "AskPrices   11877.000000,11877.250000,11877.500000,11877.7...   \n",
-       "AskVolumes                               2,4,1,1,3,2,5,1,4,1,   \n",
-       "\n",
-       "                                                            3   \n",
-       "DateTime                                 2022-07-07  00:00:30  \\\n",
-       "Open                                                 11876.25   \n",
-       "High                                                  11882.5   \n",
-       "Low                                                   11876.0   \n",
-       "Last                                                 11880.25   \n",
-       "Volume                                                   89.0   \n",
-       "NumTrades                                                89.0   \n",
-       "BidVolume                                                36.0   \n",
-       "AskVolume                                                53.0   \n",
-       "SumBid                                                   14.0   \n",
-       "SumAsk                                                   19.0   \n",
-       "BidPrices   11880.000000,11879.750000,11879.500000,11879.2...   \n",
-       "BidVolumes                               2,2,1,1,2,1,1,2,1,1,   \n",
-       "AskPrices   11880.500000,11880.750000,11881.000000,11881.2...   \n",
-       "AskVolumes                               3,4,1,2,1,1,1,1,4,1,   \n",
-       "\n",
-       "                                                            4  \n",
-       "DateTime                                 2022-07-07  00:00:40  \n",
-       "Open                                                  11879.5  \n",
-       "High                                                 11882.25  \n",
-       "Low                                                  11878.75  \n",
-       "Last                                                 11882.25  \n",
-       "Volume                                                   22.0  \n",
-       "NumTrades                                                22.0  \n",
-       "BidVolume                                                 8.0  \n",
-       "AskVolume                                                14.0  \n",
-       "SumBid                                                   14.0  \n",
-       "SumAsk                                                   26.0  \n",
-       "BidPrices   11881.500000,11881.250000,11881.000000,11880.7...  \n",
-       "BidVolumes                               1,2,2,1,1,2,1,1,1,2,  \n",
-       "AskPrices   11882.500000,11882.750000,11883.000000,11883.2...  \n",
-       "AskVolumes                               5,1,1,4,1,4,2,2,2,4,  "
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'file_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(file_name, names\u001b[39m=\u001b[39mcols_LOB, delimiter\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m|\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m data\u001b[39m.\u001b[39mhead()\u001b[39m.\u001b[39mT\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'file_name' is not defined"
+     ]
     }
    ],
    "source": [
     "data = pd.read_csv(file_name, names=cols_LOB, delimiter=\"|\")\n",
-    "data.head().T\n"
+    "data.head().T"
    ]
   },
   {
