--- a/DeepLOB/ML_course.ipynb
+++ b/DeepLOB/ML_course.ipynb
@@ -2190,6 +2190,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name_ = os.path.join(lob_path, \"LOB_labeled.pkl\")\n",
+    "\n",
+    "data_cleaned = data_cleaned.sort_index()\n",
+    "data_cleaned.to_pickle(file_name_)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
    "outputs": [
