--- a/DeepLOB/ML_course.ipynb
+++ b/DeepLOB/ML_course.ipynb
@@ -2279,7 +2279,7 @@
     "from keras.layers import LeakyReLU\n",
     "from keras.utils import np_utils\n",
     "\n",
-    "from sklearn import metrics\n",
+    "from keras import metrics\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# set random seeds\n",
@@ -2517,33 +2517,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100, 40)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
@@ -2586,26 +2559,6 @@
     "    test_y = np_utils.to_categorical(test_y, 3)\n",
     "    test_x = One1D_to_3D(test_x)\n",
     "    print(train_x.shape, train_y.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 1., 0.], dtype=float32)"
-      ]
-     },
-     "execution_count": 173,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_y[0]"
    ]
   },
   {
@@ -2659,36 +2612,6 @@
     "\n",
     "# Print the model summary\n",
     "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((14521,), (14521,))"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.shape, Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_x = One1D_to_3D(X)\n",
-    "t_y = np_utils.to_categorical(Y, 3)"
    ]
   },
   {
@@ -2797,32 +2720,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32/32 [==============================] - 4s 89ms/step\n"
-     ]
-    }
-   ],
-   "source": [
-    "pred_d = deeplob.predict(test_x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras import metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
    "outputs": [
@@ -2835,34 +2732,8 @@
     }
    ],
    "source": [
+    "pred_d = deeplob.predict(test_x)\n",
     "print('categorical_accuracy:', np.mean(metrics.categorical_accuracy(test_y, pred_d)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1000, 100, 40, 1)"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_x.shape"
    ]
   },
   {
